PR/47055: David Holland: Remove static hostname and store the hostname in syslog_data. Initialize hostname before it is used. While here, add a version to syslog_data.